# TP-GameProject

./: .travis.yml  Builder.cpp  Builder.h  CMakeLists.txt  ClassesOfUnits.cpp  ClassesOfUnits.h  Interface.cpp  Interface.h  README.md  Relationships.cpp  Relationships.h  Structure.cpp  Structure.h  cmake_install.cmake  description  main.cpp
Tests/: BuilderTest.cpp  DirectorTest.cpp  InteractionTest(gmock).cpp  RelationshipsTest.cpp  StressTests.cpp  StructureTests.cpp  TestClassHealerWithFraction.cpp  TestClassWarriorWithFraction.cpp
